WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
169266
REGRESSION (
r213412
): JPEG premultiplication tests fail under GuardMalloc
https://bugs.webkit.org/show_bug.cgi?id=169266
Summary
REGRESSION (r213412): JPEG premultiplication tests fail under GuardMalloc
Andy Estes
Reported
2017-03-06 23:52:12 PST
REGRESSION (
r213412
): JPEG premultiplication tests fail under GuardMalloc
Attachments
Patch
(9.14 KB, patch)
2017-03-07 00:13 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Patch
(9.13 KB, patch)
2017-03-07 01:10 PST
,
Andy Estes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2017-03-07 00:13:18 PST
Created
attachment 303633
[details]
Patch
Tim Horton
Comment 2
2017-03-07 00:59:35 PST
Comment on
attachment 303633
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=303633&action=review
> Source/WebCore/platform/graphics/cg/ImageBufferCG.cpp:530 > + premultipliedData = getPremultipliedImageData(IntRect(IntPoint(0, 0), logicalSize()));
Can drop the 0, 0
> Source/WebCore/platform/graphics/cg/ImageBufferCG.cpp:560 > +static RetainPtr<CFDataRef> cfData(const ImageData& source, const String& mimeType, std::optional<double> quality)
This does seem like a better plan.
Andy Estes
Comment 3
2017-03-07 01:10:22 PST
Created
attachment 303636
[details]
Patch
WebKit Commit Bot
Comment 4
2017-03-07 01:51:21 PST
Comment on
attachment 303636
[details]
Patch Clearing flags on attachment: 303636 Committed
r213508
: <
http://trac.webkit.org/changeset/213508
>
WebKit Commit Bot
Comment 5
2017-03-07 01:51:25 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug