REGRESSION (r213412): JPEG premultiplication tests fail under GuardMalloc https://bugs.webkit.org/show_bug.cgi?id=169266

Reviewed by Tim Horton.

r213412 added functions to create a CGImageRef from a canvas image buffer, which were used
to create data: URLs and blobs. If JPEG premultiplication is applied, though,
WebCore::cgImage() would return an image with a data provider pointing to stack memory.

I fixed a similar issue in ImageBuffer::toCGImage() by leaking the reference to a
Uint8ClampedArray then creating a CGDataProviderRef with a releaseData function that adopts
the leaked reference.

We could take that approach in cgImage() too by allocating the premultiplied data buffer on
the heap then freeing it with a releaseData function, but it's simpler to refactor
toCGImage()/cgImage() to return an encoded image as a CFDataRef instead of a CFImageRef.
This ensures that a CGDataProviderRef never outlives the data it points to.

Covered by existing tests.

* platform/graphics/ImageBuffer.h: Renamed toCGImage() to toCFData().
* platform/graphics/cg/ImageBufferCG.cpp:
(WebCore::dataURL): Changed to take a CFDataRef.
(WebCore::dataVector): Renamed from data(). Changed to take a CFDataRef.
(WebCore::ImageBuffer::toDataURL): Changed to call toCFData().
(WebCore::ImageBuffer::toData): Ditto.
(WebCore::ImageBuffer::toCFData): Changed to return a CFDataRef after encoding the
CGImageRef that was previously returned.
(WebCore::cfData): Ditto.
(WebCore::dataURL): Changed to call cfData().
(WebCore::data): Ditto.
(WebCore::ImageBuffer::toCGImage): Renamed to ImageBuffer::toCFData().
(WebCore::cgImage): Renamed to WebCore::cfData().


Canonical link: https://commits.webkit.org/186270@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@213508 268f45cc-cd09-0410-ab3c-d52691b4dbfc